// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner renders 1`] = `
<div
  class="container"
  data-testid="spinner"
>
  <svg
    aria-labelledby="spinner-title-1"
    class="svg"
    data-testid="svg"
    height="0"
    role="img"
    viewBox="0 0 100 100"
    width="0"
  >
    <title
      id="spinner-title-1"
    >
      A spinner is active. Please wait while the page completes a task.
    </title>
    <circle
      class="circle"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      stroke="#177a00"
      stroke-dasharray="89, 200"
      stroke-dashoffset="0"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</div>
`;

exports[`Spinner renders with children 1`] = `
<div
  class="overlayContainer"
>
  <div
    class="container centered"
    data-testid="spinner"
  >
    <svg
      aria-labelledby="spinner-title-2"
      class="svg"
      data-testid="svg"
      height="0"
      role="img"
      viewBox="0 0 100 100"
      width="0"
    >
      <title
        id="spinner-title-2"
      >
        A spinner is active. Please wait while the page completes a task.
      </title>
      <circle
        class="circle"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke="#177a00"
        stroke-dasharray="89, 200"
        stroke-dashoffset="0"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
  </div>
  <div
    class="overlay"
    data-testid="overlay"
  />
  <div
    class="opaque"
  >
    <span>
      Overlay me with the spinner
    </span>
  </div>
</div>
`;
